--- a/website/package.json
+++ b/website/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.19.6",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "@uifabric/react-cards": "^0.114.18",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
