--- a/website/package.json
+++ b/website/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@fluentui/react": "^7.152.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.13",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
