--- a/website/package.json
+++ b/website/package.json
@@ -15,7 +15,9 @@
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "@uifabric/react-cards": "^0.114.18",
+    "bootstrap": "^4.5.3",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
