--- a/website/package.json
+++ b/website/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "sass": "^1.29.0",
     "typescript": "^4.1.2",
     "web-vitals": "^0.2.4"
   },
