--- a/website/package.json
+++ b/website/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Sito_Web_Network_Statale_Informatica",
+  "name": "website",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
@@ -26,7 +26,7 @@
     "sass": "^1.29.0",
     "typescript": "^4.1.2",
     "web-vitals": "^0.2.4",
-    "homepage": "https://networkstataleinformatica.github.io/network/
+    "homepage": "https://networkstataleinformatica.github.io/network/"
   },
 	"scripts": { 
  		"start": "react-scripts start",
