--- a/website/package.json
+++ b/website/package.json
@@ -26,7 +26,7 @@
     "sass": "^1.29.0",
     "typescript": "^4.1.2",
     "web-vitals": "^0.2.4",
-    "homepage": "https://networkstataleinformatica.github.io/network/"
+    "homepage": "http://networkstataleinformatica.github.io/network/"
   },
 	"scripts": { 
  		"start": "react-scripts start",
