--- a/website/package.json
+++ b/website/package.json
@@ -2,7 +2,7 @@
   "name": "website",
   "version": "1.0.0",
   "private": true,
-	"homepage": "http://networkstataleinformatica.github.io/network/"
+  "homepage": "http://networkstataleinformatica.github.io/network",
   "dependencies": {
     "@fluentui/react": "^7.152.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
@@ -26,7 +26,7 @@
     "react-scripts": "4.0.1",
     "sass": "^1.29.0",
     "typescript": "^4.1.2",
-    "web-vitals": "^0.2.4",
+    "web-vitals": "^0.2.4"
   },
 	"scripts": { 
  		"start": "react-scripts start",
