--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,5 +6,5 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      working-directory: ./website
+      - working-directory: ./website
       - run: npm run deploy
