--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,4 +9,7 @@ jobs:
       - uses: actions/checkout@v1
       - name: npmRunDeploy
         working-directory: ./website
-        run: npm run deploy
+        run: |
+          npm run build
+          react-scripts build
+          gh-pages -d build
