--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,12 +24,15 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Install dependencies
+        working-directory: './website'
         run: npm install
 
       - name: Build
+      working-directory: './website'
         run: npm run build
 
       - name: Deploy to gh-pages
+        working-directory: './website'
         uses: peaceiris/actions-gh-pages@v3
         with:
           deploy_key: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
