Create revision file with last commit hash

--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -26,6 +26,8 @@ jobs:
 
       - run: npm install
       - run: npm run build
+      - run: git rev-parse HEAD > build/revision
+      - run: cat build/revision
       - run: git --work-tree build add --all
       - run: git --work-tree build commit -m 'deploy files'
       - run: git push origin HEAD:gh-pages --force
