--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -25,8 +25,8 @@ jobs:
         uses: oleksiyrudenko/gha-git-credentials@v2-latest
 
       - run: npm install
+      - run: git rev-parse HEAD > src/data/revision
       - run: npm run build
-      - run: git rev-parse HEAD > build/revision
       - run: cat build/revision
       - run: git --work-tree build add --all
       - run: git --work-tree build commit -m 'deploy files'
