--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -26,8 +26,8 @@ jobs:
 
       - run: npm install
       - run: git rev-parse HEAD > src/data/revision
+      - run: cat src/data/revision
       - run: npm run build
-      - run: cat build/revision
       - run: git --work-tree build add --all
       - run: git --work-tree build commit -m 'deploy files'
       - run: git push origin HEAD:gh-pages --force
