Move revision to src/data

--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -25,8 +25,8 @@ jobs:
         uses: oleksiyrudenko/gha-git-credentials@v2-latest
 
       - run: npm install
-      - run: git rev-parse HEAD > src/data/revision
-      - run: cat src/data/revision
+      - run: git rev-parse HEAD > src/data/revision.txt
+      - run: cat src/data/revision.txt
       - run: npm run build
       - run: git --work-tree build add --all
       - run: git --work-tree build commit -m 'deploy files'
