--- a/website/package.json
+++ b/website/package.json
@@ -59,6 +59,7 @@
     "@types/jquery": "^3.5.4",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.6",
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^3.1.0",
+    "raw-loader": "^4.0.2"
   }
 }
