--- a/package.json
+++ b/package.json
@@ -4,30 +4,30 @@
   "private": true,
   "homepage": "https://studentiunimi.it/",
   "dependencies": {
-    "@fluentui/react": "^7.152.2",
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
-    "@fortawesome/free-brands-svg-icons": "^5.15.1",
-    "@fortawesome/free-regular-svg-icons": "^5.15.1",
-    "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@fortawesome/react-fontawesome": "^0.1.13",
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.2.2",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.19.6",
-    "@types/react": "^16.14.2",
-    "@types/react-dom": "^16.9.10",
-    "@uifabric/react-cards": "^0.114.18",
-    "bootstrap": "^4.5.3",
-    "react": "^17.0.1",
-    "react-bootstrap": "^1.4.0",
-    "react-dom": "^17.0.1",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
+    "@fluentui/react": "7.155.4",
+    "@fortawesome/fontawesome-svg-core": "1.2.34",
+    "@fortawesome/free-brands-svg-icons": "5.15.2",
+    "@fortawesome/free-regular-svg-icons": "5.15.2",
+    "@fortawesome/free-solid-svg-icons": "5.15.2",
+    "@fortawesome/react-fontawesome": "0.1.14",
+    "@testing-library/jest-dom": "5.11.9",
+    "@testing-library/react": "11.2.3",
+    "@testing-library/user-event": "12.6.0",
+    "@types/jest": "26.0.20",
+    "@types/node": "14.14.21",
+    "@types/react": "17.0.0",
+    "@types/react-dom": "17.0.0",
+    "@uifabric/react-cards": "0.115.6",
+    "bootstrap": "4.5.3",
+    "react": "17.0.1",
+    "react-bootstrap": "1.4.3",
+    "react-dom": "17.0.1",
+    "react-router": "5.2.0",
+    "react-router-dom": "5.2.0",
     "react-scripts": "4.0.1",
-    "sass": "^1.29.0",
-    "typescript": "^4.1.2",
-    "web-vitals": "^0.2.4"
+    "sass": "1.32.4",
+    "typescript": "4.1.3",
+    "web-vitals": "1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,7 +35,8 @@
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "check-update": "npm-check -u"
   },
   "eslintConfig": {
     "extends": [
@@ -56,10 +57,11 @@
     ]
   },
   "devDependencies": {
-    "@types/jquery": "^3.5.4",
-    "@types/react-router": "^5.1.8",
-    "@types/react-router-dom": "^5.1.6",
-    "gh-pages": "^3.1.0",
-    "raw-loader": "^4.0.2"
+    "@types/jquery": "3.5.5",
+    "@types/react-router": "5.1.11",
+    "@types/react-router-dom": "5.1.7",
+    "gh-pages": "3.1.0",
+    "npm-check": "5.9.2",
+    "raw-loader": "4.0.2"
   }
 }
