--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://studentiunimi.it/",
   "dependencies": {
     "@fluentui/react": "7.155.4",
+    "@fluentui/react-theme-provider": "^0.18.4",
     "@fortawesome/fontawesome-svg-core": "1.2.34",
     "@fortawesome/free-brands-svg-icons": "5.15.2",
     "@fortawesome/free-regular-svg-icons": "5.15.2",
@@ -21,6 +22,7 @@
     "bootstrap": "4.5.3",
     "react": "17.0.1",
     "react-bootstrap": "1.4.3",
+    "react-cookie": "^4.0.3",
     "react-dom": "17.0.1",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
