--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -15,6 +15,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Run build
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build
         run: npm run build
 
