--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-bootstrap": "1.4.3",
     "react-cookie": "^4.0.3",
     "react-dom": "17.0.1",
+    "react-localization": "^1.0.17",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.1",
