--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.1",
     "sass": "1.32.4",
+    "swiper": "^6.7.0",
     "typescript": "4.1.3",
     "web-vitals": "1.1.0"
   },
