--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://studentiunimi.it/",
   "dependencies": {
     "@fluentui/react": "7.155.4",
+    "@fluentui/react-hooks": "^8.2.4",
     "@fluentui/react-theme-provider": "^0.18.4",
     "@fortawesome/fontawesome-svg-core": "1.2.34",
     "@fortawesome/free-brands-svg-icons": "5.15.2",
@@ -23,6 +24,7 @@
     "@uifabric/react-cards": "0.115.6",
     "bootstrap": "4.5.3",
     "devicon": "^2.12.0",
+    "html-react-parser": "^1.2.7",
     "node-sass": "^4.14.1",
     "react": "17.0.1",
     "react-bootstrap": "1.4.3",
