--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-bootstrap": "1.4.3",
     "react-cookie": "^4.0.3",
     "react-dom": "17.0.1",
+    "react-jsx-parser": "^1.28.4",
     "react-localization": "^1.0.17",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
