--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.1",
+    "react-typed": "^1.2.0",
     "sass": "1.32.4",
     "swiper": "^6.7.0",
     "typescript": "4.1.3",
