--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-bootstrap": "1.4.3",
     "react-cookie": "^4.0.3",
     "react-dom": "17.0.1",
+    "react-helmet": "^6.1.0",
     "react-jsx-parser": "^1.28.4",
     "react-localization": "^1.0.17",
     "react-router": "5.2.0",
@@ -67,6 +68,7 @@
   },
   "devDependencies": {
     "@types/jquery": "3.5.5",
+    "@types/react-helmet": "^6.1.2",
     "@types/react-router": "5.1.11",
     "@types/react-router-dom": "5.1.7",
     "gh-pages": "3.1.0",
