--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "17.0.1",
     "react-helmet": "^6.1.0",
     "react-jsx-parser": "^1.28.4",
+    "react-leaflet": "^3.2.1",
     "react-localization": "^1.0.17",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
