--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "bootstrap": "4.5.3",
     "devicon": "^2.12.0",
     "html-react-parser": "^1.2.7",
+    "leaflet": "^1.7.1",
     "node-sass": "^4.14.1",
-    "react": "17.0.1",
+    "react": "^17.0.1",
     "react-bootstrap": "1.4.3",
     "react-cookie": "^4.0.3",
-    "react-dom": "17.0.1",
+    "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-jsx-parser": "^1.28.4",
     "react-leaflet": "^3.2.1",
@@ -69,6 +70,7 @@
   },
   "devDependencies": {
     "@types/jquery": "3.5.5",
+    "@types/leaflet": "^1.7.5",
     "@types/react-helmet": "^6.1.2",
     "@types/react-router": "5.1.11",
     "@types/react-router-dom": "5.1.7",
