--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-cookie": "^4.0.3",
     "react-dom": "17.0.1",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.1.2",
     "react-jsx-parser": "^1.28.4",
     "react-localization": "^1.0.17",
     "react-router": "5.2.0",
