--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
+    "postbuild": "react-snap",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "check-update": "npm-check -u"
@@ -72,6 +73,9 @@
       "not op_mini all"
     ]
   },
+  "reactSnap": {
+    "inlineCss": true
+  },
   "devDependencies": {
     "@types/jquery": "3.5.5",
     "@types/react-helmet": "^6.1.2",
@@ -79,6 +83,7 @@
     "@types/react-router-dom": "5.1.7",
     "gh-pages": "3.1.0",
     "npm-check": "5.9.2",
-    "raw-loader": "4.0.2"
+    "raw-loader": "4.0.2",
+    "react-snap": "^1.23.0"
   }
 }
