--- a/package.json
+++ b/package.json
@@ -25,31 +25,28 @@
     "bootstrap": "4.5.3",
     "devicon": "^2.12.0",
     "html-react-parser": "^1.2.7",
+    "next": "^12.2.5",
     "node-sass": "^4.14.1",
-    "react": "17.0.1",
+    "react": "^17.0.1",
     "react-bootstrap": "1.4.3",
     "react-cookie": "^4.0.3",
-    "react-dom": "17.0.1",
+    "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.1.2",
     "react-jsx-parser": "^1.28.4",
     "react-localization": "^1.0.17",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
-    "react-scripts": "4.0.1",
     "react-typed": "^1.2.0",
     "sass": "1.32.4",
     "swiper": "^6.7.0",
-    "typescript": "4.1.3",
+    "typescript": "4.3.2",
     "web-vitals": "1.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "check-update": "npm-check -u"
   },
   "eslintConfig": {
