--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
     "devicon": "^2.12.0",
     "html-react-parser": "^1.2.7",
     "next": "^12.2.5",
+    "next-seo": "^5.5.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "1.4.3",
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0",
     "react-jsx-parser": "^1.28.4",
     "react-localization": "^1.0.17",
     "react-typed": "^1.2.0",
@@ -68,7 +68,6 @@
   },
   "devDependencies": {
     "@types/jquery": "3.5.5",
-    "@types/react-helmet": "^6.1.2",
     "gh-pages": "3.1.0",
     "npm-check": "5.9.2",
     "raw-loader": "4.0.2"
