--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@testing-library/user-event": "12.6.0",
     "@types/jest": "26.0.20",
     "@types/node": "14.14.21",
-    "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
     "@uifabric/react-cards": "0.115.6",
     "bootstrap": "4.5.3",
@@ -28,7 +27,7 @@
     "next": "^12.2.5",
     "next-seo": "^5.5.0",
     "node-sass": "^4.14.1",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-bootstrap": "1.4.3",
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
@@ -68,6 +67,7 @@
   },
   "devDependencies": {
     "@types/jquery": "3.5.5",
+    "@types/react": "^17.0.0",
     "gh-pages": "3.1.0",
     "npm-check": "5.9.2",
     "raw-loader": "4.0.2"
