--- a/package.json
+++ b/package.json
@@ -4,6 +4,26 @@
   "private": true,
   "homepage": "https://studentiunimi.it/",
   "dependencies": {
+    "@fluentui/react": "^8.90.1",
+    "@fluentui/react-hooks": "^8.2.4",
+    "@fluentui/react-theme-provider": "^0.18.5",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "@testing-library/jest-dom": "5.11.9",
+    "@testing-library/react": "11.2.3",
+    "@testing-library/user-event": "12.6.0",
+    "@uifabric/react-cards": "0.115.6",
+    "bootstrap": "4.5.3",
+    "devicon": "^2.12.0",
+    "html-react-parser": "^1.2.7",
+    "next": "^12.2.5",
+    "next-seo": "^5.5.0",
+    "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-bootstrap": "1.4.3",
     "react-cookie": "^4.0.3",
@@ -11,31 +31,10 @@
     "react-jsx-parser": "^1.28.4",
     "react-localization": "^1.0.17",
     "react-typed": "^1.2.0",
-    "next": "^12.2.5",
-    "next-seo": "^5.5.0",
-    "cookies-next": "^2.1.1",
-    "@fluentui/react": "^8.90.1",
-    "@fluentui/react-hooks": "^8.2.4",
-    "@fluentui/react-theme-provider": "^0.18.5",
-    "@uifabric/react-cards": "0.115.6",
-    "@material-ui/core": "^4.11.4",
-    "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "5.11.9",
-    "@testing-library/react": "11.2.3",
-    "@testing-library/user-event": "12.6.0",
-    "typescript": "4.3.2",
-    "bootstrap": "4.5.3",
-    "devicon": "^2.12.0",
-    "html-react-parser": "^1.2.7",
-    "node-sass": "^4.14.1",
     "sass": "1.32.4",
     "swiper": "^6.7.0",
-    "web-vitals": "1.1.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-brands-svg-icons": "^5.15.4",
-    "@fortawesome/free-regular-svg-icons": "^5.15.4",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.15"
+    "typescript": "4.3.2",
+    "web-vitals": "1.1.0"
   },
   "scripts": {
     "dev": "next dev",
