--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-bootstrap": "1.4.3",
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
+    "react-fast-marquee": "^1.3.5",
     "react-jsx-parser": "^1.28.4",
     "react-localization": "^1.0.17",
     "react-typed": "^1.2.0",
@@ -42,26 +43,6 @@
     "start": "next start",
     "check-update": "npm-check -u",
     "proxy": "lcp --proxyUrl https://api.studentiunimi.it/api/ --port 8010"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.3%",
-      "not ie 11",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      ">0.3%",
-      "not ie 11",
-      "not dead",
-      "not op_mini all"
-    ]
   },
   "devDependencies": {
     "@types/jquery": "3.5.5",
