--- a/package.json
+++ b/package.json
@@ -7,11 +7,6 @@
     "@fluentui/react": "^8.90.1",
     "@fluentui/react-hooks": "^8.2.4",
     "@fluentui/react-theme-provider": "^0.18.5",
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-brands-svg-icons": "^5.15.4",
-    "@fortawesome/free-regular-svg-icons": "^5.15.4",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.15",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "5.11.9",
@@ -29,6 +24,7 @@
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
     "react-fast-marquee": "^1.3.5",
+    "react-icons": "^4.4.0",
     "react-jsx-parser": "^1.28.4",
     "react-localization": "^1.0.17",
     "react-typed": "^1.2.0",
