--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "website",
   "version": "1.0.0",
-  "private": true,
+  "description": "Fully responsive website built with NextJS, React and Fluent UI, with the aim of providing services and access to all groups of didactic courses and general purposes to students of the University of Milan.",
+  "repository": "https://github.com/StudentiUniMi/website",
+  "author": "Network StudentiUniMi <info@studentiunimi.it>",
   "homepage": "https://studentiunimi.it/",
+  "private": true,
   "dependencies": {
     "@fluentui/react": "^8.90.1",
     "@fluentui/react-hooks": "^8.2.4",
@@ -12,13 +15,11 @@
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "11.2.3",
     "@testing-library/user-event": "12.6.0",
-    "@uifabric/react-cards": "0.115.6",
     "bootstrap": "4.5.3",
-    "devicon": "^2.12.0",
     "html-react-parser": "^1.2.7",
     "next": "^12.2.5",
     "next-seo": "^5.5.0",
-    "react": "^17.0.2",
+    "react": "^17.0.1",
     "react-bootstrap": "1.4.3",
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
