--- a/package.json
+++ b/package.json
@@ -12,9 +12,6 @@
     "@fluentui/react-theme-provider": "^0.18.5",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "5.11.9",
-    "@testing-library/react": "11.2.3",
-    "@testing-library/user-event": "12.6.0",
     "bootstrap": "4.5.3",
     "html-react-parser": "^1.2.7",
     "next": "^12.2.5",
@@ -30,8 +27,7 @@
     "react-typed": "^1.2.0",
     "sass": "1.32.4",
     "swiper": "^6.7.0",
-    "typescript": "4.3.2",
-    "web-vitals": "1.1.0"
+    "typescript": "4.3.2"
   },
   "scripts": {
     "dev": "next dev",
