--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "homepage": "https://studentiunimi.it/",
   "private": true,
   "dependencies": {
-    "@fluentui/react": "^8.90.1",
+    "@fluentui/react": "^8.98.0",
+    "@fluentui/react-cards": "^0.205.9",
     "@fluentui/react-hooks": "^8.2.4",
     "@fluentui/react-theme-provider": "^0.18.5",
     "@material-ui/core": "^4.11.4",
