--- a/package.json
+++ b/package.json
@@ -7,28 +7,25 @@
   "homepage": "https://studentiunimi.it/",
   "private": true,
   "dependencies": {
-    "@fluentui/react": "^8.98.0",
+    "@fluentui/react": "^8.90.1",
     "@fluentui/react-cards": "^0.205.9",
     "@fluentui/react-hooks": "^8.2.4",
     "@fluentui/react-theme-provider": "^0.18.5",
-    "@material-ui/core": "^4.11.4",
-    "@material-ui/icons": "^4.11.2",
     "bootstrap": "4.5.3",
-    "html-react-parser": "^1.2.7",
     "next": "^12.2.5",
     "next-seo": "^5.5.0",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-bootstrap": "1.4.3",
     "react-cookie": "^4.0.3",
-    "react-dom": "^17.0.1",
+    "react-dom": "^17.0.2",
     "react-fast-marquee": "^1.3.5",
     "react-icons": "^4.4.0",
     "react-jsx-parser": "^1.28.4",
     "react-localization": "^1.0.17",
-    "react-typed": "^1.2.0",
     "sass": "1.32.4",
     "swiper": "^6.7.0",
-    "typescript": "4.3.2"
+    "typescript": "4.3.2",
+    "web-vitals": "^3.0.3"
   },
   "scripts": {
     "dev": "next dev",
