Remove react-theme-provider

--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "@fluentui/react": "^8.90.1",
     "@fluentui/react-cards": "^0.205.9",
     "@fluentui/react-hooks": "^8.2.4",
-    "@fluentui/react-theme-provider": "^0.18.5",
     "bootstrap": "4.5.3",
     "next": "^12.2.5",
     "next-seo": "^5.5.0",
     "react": "^17.0.2",
+    "react-accessible-accordion": "^5.0.0",
     "react-bootstrap": "1.4.3",
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.2",
