--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/node": "14.14.21",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
+    "@types/react-lottie": "^1.2.6",
     "concurrently": "^7.6.0",
     "gh-pages": "3.1.0",
     "npm-check": "5.9.2",
