--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^4.4.0",
     "react-jsx-parser": "^1.28.4",
     "react-localization": "^1.0.17",
+    "react-lottie": "^1.2.3",
     "sass": "1.32.4",
     "swiper": "^6.7.0",
     "typescript": "4.3.2",
@@ -40,6 +41,7 @@
     "@types/node": "14.14.21",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
+    "@types/react-lottie": "^1.2.6",
     "concurrently": "^7.6.0",
     "gh-pages": "3.1.0",
     "npm-check": "5.9.2",
