--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-jsx-parser": "^1.28.4",
     "react-localization": "^1.0.17",
     "react-lottie": "^1.2.3",
+    "react-scroll": "^1.8.9",
     "sass": "1.32.4",
     "swiper": "^6.7.0",
     "typescript": "4.3.2",
@@ -39,9 +40,10 @@
     "@types/jest": "26.0.20",
     "@types/jquery": "3.5.5",
     "@types/node": "14.14.21",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.2",
+    "@types/react": "^17.0.14",
+    "@types/react-dom": "^17.0.14",
     "@types/react-lottie": "^1.2.6",
+    "@types/react-scroll": "^1.8.7",
     "concurrently": "^7.6.0",
     "gh-pages": "3.1.0",
     "npm-check": "5.9.2",
