--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.2",
     "react-fast-marquee": "^1.3.5",
+    "react-headroom": "^3.2.1",
     "react-icons": "^4.4.0",
     "react-jsx-parser": "^1.28.4",
     "react-localization": "^1.0.17",
@@ -42,6 +43,7 @@
     "@types/node": "14.14.21",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.14",
+    "@types/react-headroom": "^3.2.0",
     "@types/react-lottie": "^1.2.6",
     "@types/react-scroll": "^1.8.7",
     "concurrently": "^7.6.0",
