--- a/package.json
+++ b/package.json
@@ -19,16 +19,15 @@
     "@tanstack/react-query": "^5.85.5",
     "framer-motion": "^12.23.12",
     "geist": "^1.4.2",
-    "i18next": "^25.4.0",
     "js-cookie": "^3.0.5",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.540.0",
     "next": "15.5.0",
     "next-i18next": "^15.4.2",
+    "next-intl": "^4.3.5",
     "next-seo": "^6.8.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-i18next": "^15.7.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
